--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "dependencies": {},
+  "dependencies": {
+    "javascript-lp-solver": "^0.4.5"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "node server.js"
